shopping cart responsive

--- a/src/app/style/sass/_base.scss
+++ b/src/app/style/sass/_base.scss
@@ -125,3 +125,5 @@ img.full-width { height: auto; }
 .dark-blue-bg { background-color: $dark-blue-theme-color !important; }
 .skin-bg { background-color: $skin-bg-color !important; }
 .gray-bg { background-color: #f5f5f5 !important; }
+.bold-font {font-weight: 600;}
+.auto-height {height:auto;}
