--- a/src/app/views/cart/cart.html
+++ b/src/app/views/cart/cart.html
@@ -61,7 +61,7 @@
 </div> -->
 <div class="container">
 	<div class="row">
-		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+		<div class="col-lg-12 col-md-12 col-sm-12 hidden-xs">
 			<table class="table cart-table">
 				<thead>
 					<tr>
@@ -117,10 +117,75 @@
 				</tbody>
 			</table>
 		</div>
+		<!-- mobile cart -->
+		<div class="col-xs-12 visible-xs no-padding">
+			<article class="col-xs-12 mobile-cart" ng-repeat="item in mdl.data.rental_products">
+				<figure>
+					<a href="#" title="" class="hover-effect pull-center"><img ng-src="{{(item.product.image) || 'http://placehold.it/166x150'}}" alt="" class="inline-block"></a>
+				</figure>
+				<div class="col-xs-12 no-padding devider"></div>
+				<div class="col-xs-12 no-padding details">
+					<h4 class="box-title bold-font" style="margin-bottom: 5px;">{{item.product.name}}</h4>
+					<div class="col-xs-12 no-padding amenities">
+						<p class="no-margin">
+							{{item.date_start | date}} to
+							{{item.date_end | date}}
+						</p>
+					</div>
+					<div class="col-xs-12 no-padding">
+						<p class="no-margin">
+							Operation: Rented
+						</p>
+						<p class="bold-font" style="margin-bottom: 5px;">Quantity:
+						</p>
+						<select ng-change="update(item)" ng-model="item.qty" ng-options="qty for qty in mdl.qtys" class="form-control white-bg pull-right">
+								<option value="">Select</option>
+						</select>
+					</div>
+					<div class="col-xs-12 no-padding">
+						<p style="margin-bottom: 5px; margin-top: 5px;">
+							<input ng-model="item.is_postpaid" disabled type="checkbox"> Postpaid
+						</p>
+						<select ng-change="update(item)" ng-model="item.shipping_kind" ng-options="key as value for (key,value) in mdl.shippingKinds" class="form-control white-bg pull-right">
+							<option value="">Order Type</option>
+						</select>
+					</div>
+					<div class="col-xs-12 no-padding">
+						<div class="col-xs-4 price-col-mobile">
+							<p>Cost</p>
+							<h3>$12</h3>
+						</div>
+						<div class="col-xs-4 price-col-mobile">
+							<p>Shipping</p>
+							<h3>$120</h3>
+						</div>
+						<div class="col-xs-4 price-col-mobile">
+							<p>Additional</p>
+							<h3>$1200</h3>
+						</div>
+					</div>
+					<div class="col-xs-12 devider"></div>
+					<div class="col-xs-12 no-padding estim-rate">
+						<p>Estimated Rent: <span class="pull-right">${{item.cost_breakup.subtotal.amt}}</span></p>
+					</div>
+					<div class="col-xs-12 devider"></div>
+					<div class="col-xs-12 no-padding action pull-center cart-action">
+						<a href="" class="pull-left">
+							<i class="fa fa-pencil"></i>
+						</a>
+						<a href="" class="text">Bookmark and Remove</a>
+						<a href="" class="pull-right">
+							<i class="fa fa-trash"></i>
+						</a>
+					</div>
+				</div>
+			</article>
+			<div class="col-xs-12 devider"></div>
+		</div>
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 total-amount-col">
 			<p class="pull-right">Total Amount Payable: &nbsp<span>$3200.00</span></p>
 		</div>
-		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 cart-button pull-center">
 			<button class="btn all-btn pull-right primary-btn" ng-click="checkout()">Checkout</button>
 			<button class="btn all-btn pull-left primary-btn">Continue Renting Equipments</button>
 		</div>
