--- a/src/app/views/checkout-address/checkout-address.html
+++ b/src/app/views/checkout-address/checkout-address.html
@@ -259,8 +259,8 @@
 				</div>
 		</div>
 </div> -->
-<div class="col-lg-9 col-md-9 col-sm-9 col-xs-12">
-	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 progress-bar-col">
+<div class="col-lg-9 col-md-9 col-sm-9 col-xs-12 no-padding">
+	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 progress-bar-col col-padding-small">
 		<ul class="progress-indicator">
 			<li class="active">
 				<span class="bubble"></span>
@@ -276,70 +276,17 @@
 			</li>
 		</ul>
 	</div>
-	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 shipping-head">
+	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 shipping-head col-padding-small">
 		<p class="heading-text">Shipping Address:</p>
 	</div>
-	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 col-padding-small">
 		<div>
 		  <ul class="nav nav-tabs jobsite-nav-tabs" role="tablist">
-		    <li role="presentation"><a showtab href="#home" aria-controls="home" role="tab" data-toggle="tab">Choose from listed sites</a></li>
-		    <li role="presentation" class="active"><a showtab href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Deliver to a new site</a></li>
+		    <li role="presentation" class="active"><a showtab href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Choose from listed sites</a></li>
+		    <li role="presentation"><a showtab href="#home" aria-controls="home" role="tab" data-toggle="tab">Deliver to a new site</a></li>
 		  </ul>
 		  <div class="tab-content">
-		    <div role="tabpanel" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 tab-pane jobsite-tab" id="home">
-		    	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-			    	<select class="form-control">
-			    		<option>Jobsite: ABC</option>
-			    		<option>Jobsite: XYZ</option>
-			    		<option>Jobsite: PQR</option>
-			    	</select>
-		    	</div>
-		    	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-		    	</div>
-		    	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 devider devider-bottom"></div>
-		    	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-		    		<input class="form-control" placeholder="First Name">
-		    	</div>
-		    	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-		    		<input class="form-control" placeholder="Company Name">
-		    	</div>
-		    	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-		    		<input class="form-control" placeholder="Phone Number">
-		    	</div>
-		    	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-		    		<input class="form-control" placeholder="Address Line 1">
-		    	</div>
-		    	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-		    		<input class="form-control" placeholder="Address Line 2">
-		    	</div>
-		    	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-		    		<input class="form-control" placeholder="Country">
-		    	</div>
-		    	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-		    		<input class="form-control" placeholder="State">
-		    	</div>
-		    	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-		    		<input class="form-control" placeholder="City">
-		    	</div>
-		    	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-		    		<input class="form-control" placeholder="Zip Code">
-		    	</div>
-		    	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 check-same-address">
-		    		<input type="checkbox">
-		    		<span>Billing Address is same as Shipping Address</span>
-		    	</div>
-		    	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 devider">
-		    	</div>
-		    	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 shipping-head">
-		    		<p class="heading-text">Billing Address:</p>
-		    	</div>
-		    	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 check-same-address">
-		    		<input type="checkbox">
-		    		<span>By Continuing you are agree to the <a href="">Terms and Conditions</a></span>
-		    		<button class="btn all-btn primary-btn pull-right">Continue with Payment</button>
-		    	</div>
-		    </div>
-		    <div role="tabpanel" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 tab-pane active jobsite-tab" id="profile">
+		    <div role="tabpanel" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 tab-pane active jobsite-tab col-padding-small" id="profile">
 		    	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 			    	<select class="form-control">
 			    		<option>Jobsite: ABC</option>
@@ -386,17 +333,74 @@
 		    	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 shipping-head">
 		    		<p class="heading-text">Billing Address:</p>
 		    	</div>
-		    	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 check-same-address">
+		    	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 check-same-address">
 		    		<input type="checkbox">
 		    		<span>By Continuing you are agree to the <a href="">Terms and Conditions</a></span>
-		    		<button class="btn all-btn primary-btn pull-right" ng-click="continueWithPayment()">Continue with Payment</button>
+		    	</div>
+		    	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 pull-center cont-btn-col">
+		    		<button class="btn all-btn primary-btn pull-right" ui-sref="main.payment">Continue with Payment</button>
+		    	</div>
+		    </div>
+		    <div role="tabpanel" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 tab-pane jobsite-tab col-padding-small" id="home">
+		    	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+			    	<select class="form-control">
+			    		<option>Jobsite: ABC</option>
+			    		<option>Jobsite: XYZ</option>
+			    		<option>Jobsite: PQR</option>
+			    	</select>
+		    	</div>
+		    	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 col-padding-small">
+		    	</div>
+		    	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 devider devider-bottom col-padding-small"></div>
+		    	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+		    		<input class="form-control" placeholder="First Name">
+		    	</div>
+		    	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+		    		<input class="form-control" placeholder="Company Name">
+		    	</div>
+		    	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+		    		<input class="form-control" placeholder="Phone Number">
+		    	</div>
+		    	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+		    		<input class="form-control" placeholder="Address Line 1">
+		    	</div>
+		    	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+		    		<input class="form-control" placeholder="Address Line 2">
+		    	</div>
+		    	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+		    		<input class="form-control" placeholder="Country">
+		    	</div>
+		    	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+		    		<input class="form-control" placeholder="State">
+		    	</div>
+		    	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+		    		<input class="form-control" placeholder="City">
+		    	</div>
+		    	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+		    		<input class="form-control" placeholder="Zip Code">
+		    	</div>
+		    	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 check-same-address">
+		    		<input type="checkbox">
+		    		<span>Billing Address is same as Shipping Address</span>
+		    	</div>
+		    	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 devider">
+		    	</div>
+		    	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 shipping-head">
+		    		<p class="heading-text">Billing Address:</p>
+		    	</div>
+		    	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 check-same-address">
+		    		<input type="checkbox">
+		    		<span>By Continuing you are agree to the <a href="">Terms and Conditions</a></span>
+		    	</div>
+		    	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 pull-center cont-btn-col">
+		    		<button class="btn all-btn primary-btn pull-right" ui-sref="main.payment">Continue with Payment</button>
 		    	</div>
 		    </div>
 		  </div>
 		</div>
 	</div>
 </div>
-<div class="sidebar col-lg-3 col-md-6 col-sm-3 hidden-xs">
+<div class="sidebar col-lg-3 col-md-3 col-sm-3 hidden-xs">
 		<div class="booking-details travelo-box">
 				<h4>Cart Summary</h4>
 				<article class="tour-detail">
