--- a/src/app/views/main/main.html
+++ b/src/app/views/main/main.html
@@ -1,127 +1,115 @@
 <div>
-		<header id="header" class="navbar-static-top style2">
-				<div class="topnav">
-						<div class="container">
-								<!-- <nav id="main-menu" role="navigation">
-										<ul class="menu">
-												<li class="menu-item-has-children pointerhover">
-														<a>Need Help?</a>
-												</li>
-										</ul>
-								</nav> -->
-								<ul class="quick-menu pull-right clearfix">
-									<li class="menu-item-has-children pointerhover">
-										<a>Need Help ? Call (24X7): 1-800-123-0000</a>
-									</li>
-										<!-- <li ng-if="!isLoggedIn()">
-												<a ng-click="openLogin()" class="soap-popupbox pointerhover">Login</a>
-										</li>
-										<li ng-if="!isLoggedIn()">
-												<a ng-click="openSignUp()" class="soap-popupbox pointerhover">Register</a>
-										</li>
-										<li></li>
-										<li ng-if="isLoggedIn()" class="ribbon currency">
-												<a ng-click="accountClick()" class="soap-popupbox pointerhover">ACCOUNT</a>
-												<ul class="menu mini">
-														<li><a ui-sref="main.account.dashboard" title="dashboard">Dashboard</a></li>
-														<li><a ui-sref="main.account.profile.view" title="profile-settings">Profile Settings</a></li>
-														<li><a ng-click="logout()" title="signout">Signout</a></li>
-												</ul>
-										</li>
-										<li ng-if="isLoggedIn()">
-												<a class="pointerhover cart-count" ui-sref="main.cart"><i class="soap-icon-shopping" style="font-size: 6em;"></i><span>{{rmodel.cartCount || 0}}</span></a>
-										</li> -->
-								</ul>
-						</div>
-				</div>
-				<div class="top-header">
-					<div class="container">
-							<h1 class="logo navbar-brand">
-									<a class="pointerhover">
-											<img ui-sref="home" src="assets/images/logo.png"  />
-									</a>
-							</h1>
-							<div class="header-search col-sm-offset-4 col-md-offset-2 hidden-mobile">
-									<form ng-submit="mainMdl.search()">
-											<div class="col-xs-10">
-													<ul class="quick-menu clearfix main-quick-menu">
-														<li ng-if="isLoggedIn()" class="ribbon currency equip-drop">
-															<a ng-click="accountClick()" class="soap-popupbox pointerhover">Equipments &nbsp</a>
-															<!-- <ul class="menu mini">
-																<li><a ui-sref="main.account.dashboard" title="dashboard">Dashboard</a></li>
-																<li><a ui-sref="main.account.profile.view" title="profile-settings">Profile Settings</a></li>
-																<li><a ng-click="logout()" title="signout">Signout</a></li>
-															</ul> -->
-														</li>
-													</ul>
-													<div class="header-search-bar">
-														<i class="icon soap-icon-search pull-right"></i>
-														<angucomplete-alt
-																							placeholder="Equipment Name, Part Name, etc.."
-																							pause="400"
-																							initial-value="mainMdl.searchText"
-																							selected-object="mainMdl.searchObj"
-																							remote-api-handler="mainMdl.searchHelper"
-																							remote-url-data-field="data"
-																							title-field="name"
-																							input-changed="mainMdl.inputChanged"
-																							input-class="input-text white-bg where"/>
-														<!--<input type="text" ng-model="mainMdl.searchText" name="where" value="" placeholder="Equipment Name, Part Name, etc.." class="input-text white-bg full-width where" />-->
-													</div>
-											</div>
-											<div class="col-xs-2 pull-center not-user" ng-if="!isLoggedIn()">
-												<a ng-click="openLogin()" class="soap-popupbox pointerhover">Login</a>
-												<a ng-click="openSignUp()" class="soap-popupbox pointerhover">Register</a>
-											</div>
-											<div class="col-xs-2 my-acc-col pointerhover" ng-if="isLoggedIn()">
-												<ul class="quick-menu clearfix main-quick-menu">
-														<li ng-if="isLoggedIn()" class="ribbon currency equip-drop my-acc-drop">
-															<img src="/assets/images/avtar.png">
-															<a ng-click="accountClick()" class="soap-popupbox pointerhover">Account &nbsp</a>
-															<ul class="menu mini">
-																<li><a ui-sref="main.account.dashboard">My Buyer Dashboard</a></li>
-																<li><a ui-sref="main.sellerAccount.dashboard">My Seller Dashboard</a></li>
-																<li><a ui-sref="main.account.profile.view" title="profile-settings">Account & Setting</a></li>
-																<li><a href="" ng-click="logout()" title="signout">Signout</a></li>
-															</ul>
-														</li>
-												</ul>
-													<!-- <div class="col-xs-3">
-															<div class="datepicker-wrap transparent" ng-click="mainMdl.open($event,'Start')">
-																	<input type="text" class="input-text white-bg full-width check-in" datepicker-popup="{{dateFormat}}" ng-model="mainMdl.startDate"
-																				 is-open="mainMdl.openedStart" min-date="mainMdl.minDate" datepicker-options="mainMdl.dateOptions"
-																				 ng-focus="mainMdl.open($event,'Start')"
-																					close-text="Close"/>
-															</div>
-													</div>
-													<div class="col-xs-3">
-															<div class="datepicker-wrap transparent" ng-click="mainMdl.open($event,'End')">
-																	<input type="text" class="input-text white-bg full-width check-in" datepicker-popup="{{dateFormat}}" ng-model="mainMdl.endDate"
-																				 is-open="mainMdl.openedEnd" min-date="mainMdl.minDate" datepicker-options="mainMdl.dateOptions"
-																				 ng-focus="mainMdl.open($event,'End')"
-																					close-text="Close"/>
-															</div>
-
-
-													</div>
-													<div class="col-xs-3" style="border: 1px solid #dbdbdb;">
-
-															<select class="form-control full-width white-bg"
-																			style="height: 32px;border-radius: 0px;border: 0px;box-shadow: none;">
-																	<option>Rent</option>
-																	<option>Buy</option>
-															</select>
-
-													</div>
-													<div class="col-xs-3">
-															<button type="submit" process-indicator="PI:SearchProcess" ng-click="mainMdl.search()" class="btn-medium uppercase full-width">search</button>
-													</div> -->
-											</div>
-									</form>
+	<header id="header" class="navbar-static-top style2">
+		<div class="topnav">
+			<div class="container">
+				<ul class="quick-menu pull-right clearfix">
+					<li class="menu-item-has-children pointerhover">
+						<a>Need Help ? Call (24X7): 1-800-123-0000</a>
+					</li>
+					<!-- <li ng-if="isLoggedIn()">
+						<a class="pointerhover cart-count" ui-sref="main.cart"><i class="soap-icon-shopping" style="font-size: 6em;"></i><span>{{rmodel.cartCount || 0}}</span></a>
+					</li> -->
+				</ul>
+			</div>
+		</div>
+		<div class="top-header">
+			<div class="container">
+				<h1 class="logo navbar-brand">
+					<a class="pointerhover">
+						<img ui-sref="home" src="assets/images/logo.png"  />
+					</a>
+				</h1>
+				<div class="header-search col-md-offset-2 col-sm-offset-2 col-xs-offset-2">
+					<form ng-submit="mainMdl.search()">
+						<div class="col-lg-10 col-md-10 col-sm-6 col-xs-6">
+							<ul class="quick-menu clearfix main-quick-menu">
+								<li ng-if="isLoggedIn()" class="ribbon currency equip-drop">
+									<a ng-click="accountClick()" class="soap-popupbox pointerhover">Equipments &nbsp</a>
+								</li>
+							</ul>
+							<div class="header-search-bar">
+								<i class="icon soap-icon-search pull-right"></i>
+								<angucomplete-alt	placeholder="Equipment Name, Part Name, etc.." pause="400" initial-value="mainMdl.searchText"	selected-object="mainMdl.searchObj" remote-api-handler="mainMdl.searchHelper" remote-url-data-field="data" title-field="name"	input-changed="mainMdl.inputChanged" input-class="input-text white-bg where"/>
+								<input type="text" ng-model="mainMdl.searchText" name="where" value="" placeholder="Equipment Name, Part Name, etc.." class="input-text white-bg full-width where" />
 							</div>
+						</div>
+						<div class="col-lg-2 col-md-2 col-sm-6 col-xs-6 pull-center not-user" ng-if="!isLoggedIn()">
+							<a ng-click="openLogin()" class="soap-popupbox pointerhover">Login</a>
+							<a ng-click="openSignUp()" class="soap-popupbox pointerhover">Register</a>
+						</div>
+						<div class="col-lg-2 col-md-2 col-sm-6 col-xs-6 my-acc-col pointerhover" ng-if="isLoggedIn()">
+							<ul class="quick-menu clearfix main-quick-menu">
+								<li ng-if="isLoggedIn()" class="ribbon currency equip-drop my-acc-drop">
+									<img src="/assets/images/avtar.png">
+									<a ng-click="accountClick()" class="soap-popupbox pointerhover">Account &nbsp</a>
+									<ul class="menu mini">
+										<li><a ui-sref="main.account.dashboard">My Buyer Dashboard</a></li>
+										<li><a ui-sref="main.sellerAccount.dashboard">My Seller Dashboard</a></li>
+										<li><a ui-sref="main.account.profile.view" title="profile-settings">Account & Setting</a></li>
+										<li><a href="" ng-click="logout()" title="signout">Signout</a></li>
+									</ul>
+								</li>
+							</ul>
+						</div>
+					</form>
+				</div>
+			</div>
+			<!-- <nav class="navbar">
+				<div class="container-fluid">
+					<div class="navbar-header">
+						<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+							<span class="sr-only">Toggle navigation</span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+						</button>
+						<a class="pointerhover">
+							<img ui-sref="home" src="assets/images/logo.png"  />
+						</a>
+					</div>
+					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+						<ul class="nav navbar-nav">
+							<li ng-if="isLoggedIn()" class="ribbon currency equip-drop dropdown">
+								<a ng-click="accountClick()" class="soap-popupbox pointerhover dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Equipments &nbsp</a>
+								<ul class="dropdown-menu">
+									<li><a href="#">Action</a></li>
+									<li><a href="#">Another action</a></li>
+									<li><a href="#">Something else here</a></li>
+									<li role="separator" class="divider"></li>
+									<li><a href="#">Separated link</a></li>
+									<li role="separator" class="divider"></li>
+									<li><a href="#">One more separated link</a></li>
+								</ul>
+							</li>
+						</ul>
+						<form class="navbar-form navbar-left" role="search" ng-submit="mainMdl.search()">
+							<div class="form-group">
+								<div class="header-search-bar">
+									<i class="icon soap-icon-search pull-right"></i>
+									<angucomplete-alt	placeholder="Equipment Name, Part Name, etc.." pause="400" initial-value="mainMdl.searchText"	selected-object="mainMdl.searchObj" remote-api-handler="mainMdl.searchHelper" remote-url-data-field="data" title-field="name"	input-changed="mainMdl.inputChanged" input-class="input-text white-bg where"/>
+									<input type="text" ng-model="mainMdl.searchText" name="where" value="" placeholder="Equipment Name, Part Name, etc.." class="input-text white-bg full-width where" />
+								</div>
+							</div>
+						</form>
+						<ul class="nav navbar-nav navbar-right my-acc-col">
+							<li ng-if="!isLoggedIn()"><a ng-click="openLogin()" class="soap-popupbox pointerhover">Login</a></li>
+							<li ng-if="!isLoggedIn()"><a ng-click="openSignUp()" class="soap-popupbox pointerhover">Register</a></li>
+							<li ng-if="isLoggedIn()" class="ribbon currency equip-drop my-acc-drop dropdown main-quick-menu">
+								<img src="/assets/images/avtar.png">
+								<a ng-click="accountClick()" class="soap-popupbox pointerhover dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Account &nbsp</a>
+								<ul class="menu mini dropdown-menu my-acc-drop">
+									<li><a ui-sref="main.account.dashboard">My Buyer Dashboard</a></li>
+									<li><a ui-sref="main.sellerAccount.dashboard">My Seller Dashboard</a></li>
+									<li><a ui-sref="main.account.profile.view" title="profile-settings">Account & Setting</a></li>
+									<li><a href="" ng-click="logout()" title="signout">Signout</a></li>
+								</ul>
+							</li>
+						</ul>
 					</div>
 				</div>
-		</header>
+			</nav> -->
+		</div>
+	</header>
 		<!-- <div class="page-title-container">
 				<div class="container">
 						<div class="page-title pull-left">
@@ -146,15 +134,15 @@
 				</div>
 		</div> -->
 		<section id="content" class="gray-area">
-				<div class="container">
-						<div ng-show="rmodel.message.show" class="alert alert-{{rmodel.message.type}}">
-								{{rmodel.message.text}}
-								<span class="close" ng-click="rmodel.message.show=false"></span>
-						</div>
-						<div id="main" ui-view></div>
+			<div class="container">
+				<div ng-show="rmodel.message.show" class="alert alert-{{rmodel.message.type}}">
+					{{rmodel.message.text}}
+					<span class="close" ng-click="rmodel.message.show=false"></span>
 				</div>
+				<div id="main" ui-view></div>
+			</div>
 		</section>
-		<footer id="footer">
+		<!-- <footer id="footer">
 				<div class="footer-wrapper">
 						<div class="container">
 								<div class="row">
@@ -235,6 +223,90 @@
 								</div>
 						</div>
 				</div>
-		</footer>
+		</footer> -->
+
+
+
+		<footer id="footer">
+	<div class="footer-wrapper landing-footer">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 footer-content">
+					<h2>Discover</h2>
+					<ul class="discover triangle hover row">
+						<li class="col-xs-6"><a>Equipments</a></li>
+						<li class="col-xs-6"><a>Power Systems</a></li>
+						<li class="col-xs-6"><a>Travelo Picks</a></li>
+						<li class="col-xs-6"><a>Attachments</a></li>
+						<li class="col-xs-6"><a>Industry Solutions</a></li>
+						<li class="col-xs-6"><a>Insurance</a></li>
+						<li class="col-xs-6"><a>Operate Safety</a></li>
+						<li class="col-xs-6"><a>API Access</a></li>
+						<li class="col-xs-6"><a>Support</a></li>
+						<li class="col-xs-6"><a>Maintenance</a></li>
+					</ul>
+				</div>
+				<div class="col-xs-12 visible-xs devider"></div>
+				<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 footer-content">
+					<h2>News and Events</h2>
+					<ul class="discover triangle hover row">
+						<li class="col-xs-6"><a>Announcements</a></li>
+						<li class="col-xs-6"><a>Press Kits</a></li>
+						<li class="col-xs-6"><a>Travelo Picks</a></li>
+						<li class="col-xs-6"><a>Trade shows</a></li>
+					</ul>
+				</div>
+				<div class="col-xs-12 visible-xs devider"></div>
+				<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 footer-content">
+					<h2>Mailing List</h2>
+					<p>Sign up for our mailing list to get latest updates and offers.</p>
+					<br />
+					<div class="icon-check">
+						<input type="text" class="input-text full-width" placeholder="your email" />
+					</div>
+					<br />
+					<span>We respect your privacy</span>
+				</div>
+				<div class="col-xs-12 visible-xs devider"></div>
+				<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 footer-content">
+					<h2>About Marketplace</h2>
+					<p>Marketplace brings you a modern, comfortable and easy way to rent, buy and sell equipments online.</p>
+					<br />
+					<address class="contact-details">
+						<span class="contact-phone"><i class="soap-icon-phone"></i> 1-800-123-0000</span>
+						<br />
+						<a href="mailto:help@marketplace.com" class="contact-email">help@marketplace.com</a>
+					</address>
+					<ul class="social-icons clearfix">
+						<li class="twitter"><a title="twitter"  ><i class="soap-icon-twitter"></i></a></li>
+						<li class="googleplus"><a title="googleplus"  ><i class="soap-icon-googleplus"></i></a></li>
+						<li class="facebook"><a title="facebook"  ><i class="soap-icon-facebook"></i></a></li>
+						<li class="linkedin"><a title="linkedin"  ><i class="soap-icon-linkedin"></i></a></li>
+						<li class="vimeo"><a title="vimeo"  ><i class="soap-icon-vimeo"></i></a></li>
+						<li class="dribble"><a title="dribble"  ><i class="soap-icon-dribble"></i></a></li>
+						<li class="flickr"><a title="flickr"  ><i class="soap-icon-flickr"></i></a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="bottom gray-area">
+		<div class="container">
+			<div class="logo pull-left">
+				<a href="#" title="Marketplace - Home">
+					<img src="assets/images/logo.png" />
+				</a>
+			</div>
+			<div class="pull-right">
+				<a id="back-to-top"   class="animated" data-animation-type="bounce"><i class="soap-icon-longarrow-up circle"></i></a>
+			</div>
+			<div class="copyright pull-right">
+				<p>&copy; 2015 Market Place</p>
+			</div>
+		</div>
+	</div>
+</footer>
+
+
 </div>
 
