--- a/src/app/views/seller-account/orders/orders.html
+++ b/src/app/views/seller-account/orders/orders.html
@@ -1,4 +1,4 @@
-<div id="booking" class="tab-pane fade in">
+<div id="booking" class="tab-pane fade in col-padding-small col-padding-sm">
     <ui-view>
 
     </ui-view>
