--- a/src/app/views/seller-account/orders/list/list.html
+++ b/src/app/views/seller-account/orders/list/list.html
@@ -1,29 +1,22 @@
 
-<h2>Orders Received</h2>
+	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 seller-header">
+		<h1 class="no-margin skin-color seller-heading-font">Orders Received</h1>
+	</div>
 
-<div class="booking-history">
-
-    <div ng-repeat="order in mdl.orders" class="booking-info clearfix">
-        <h4 class="box-title">
-            <i class="icon soap-icon-card yellow-color circle"></i>Order
-            <small>ID : {{order.id}}</small>
-        </h4>
-        <h4 class="box-title col-lg-offset-1">
-            <i class="icon yellow-color circle"></i>{{order.items.length}} items
-        </h4>
-        <!--<h4 class="box-title col-lg-offset-1">
-            <i class="icon soap-icon-departure yellow-color"></i>City,state,California
-        </h4>-->
-        <h4 class="box-title col-lg-offset-1">
-            <i class="icon yellow-color circle"></i>$ {{order.subtotal}}
-        </h4>
-
-        <!-- <button class="btn all-btn pull-right primary-btn" ui-sref="main.sellerAccount.orders.view({id:order.id})">View</button> -->
-        <a ui-sref="main.sellerAccount.orders.view({id:order.id})" class="pull-right">
-            <i class="fa fa-eye"></i>
-        </a>
-
-    </div>
-
-
-</div>
+	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 booking-history no-padding">
+		<div ng-repeat="order in mdl.orders" class="booking-info clearfix">
+			<h4 class="box-title">
+				<i class="icon soap-icon-card yellow-color circle"></i>Order
+				<small>ID : {{order.id}}</small>
+			</h4>
+			<h4 class="box-title col-lg-offset-1">
+				<i class="icon yellow-color circle"></i>{{order.items.length}} items
+			</h4>
+			<h4 class="box-title col-lg-offset-1">
+				<i class="icon yellow-color circle"></i>$ {{order.subtotal}}
+			</h4>
+			<a ui-sref="main.sellerAccount.orders.view({id:order.id})" class="pull-right">
+				<i class="fa fa-eye"></i>
+			</a>
+		</div>
+	</div>
