sidebar on seller dashboard

--- a/src/app/style/sass/responsive.scss
+++ b/src/app/style/sass/responsive.scss
@@ -698,6 +698,9 @@
     margin: 0 0 10px;
     font-size: 21px !important;
   }
+  .hide-mobile {
+    display: none;
+  }
 }
 
 /* 8. Styles for devices(<=480px ) */
